--- a/hood_app/templates/registration/login.html
+++ b/hood_app/templates/registration/login.html
@@ -1,5 +1,5 @@
 {%extends "registration/base.html"%}
-{% load bootstrap4 %}
+{% load bootstrap3 %}
 {% block content %}
 <div class="container">
   <div class="row" style="margin-top:90px;">
@@ -12,7 +12,7 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Mtaa Login</h3>
+          <h3 class="text-center">Neighbourhood Login</h3>
         </div>
         <div class="panel-body">
 
