--- a/hood_app/templates/navbar.html
+++ b/hood_app/templates/navbar.html
@@ -41,7 +41,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'addneighbourhood' %}">Add New Neighbourhood</a>
+        <a class="nav-link" href="{% url 'addneighbourhood' %}">Add hood</a>
       </li>
 
       <!-- Dropdown -->
@@ -49,7 +49,7 @@
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">Others</a>
         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="/profile"">Profile Page</a>
+          <a class="dropdown-item" href="/profile"">Profile</a>
           <a class="dropdown-item" href="/accounts/login/">Log Out</a>
         </div>
       </li>
