--- a/hood_app/templates/registration/registration_form.html
+++ b/hood_app/templates/registration/registration_form.html
@@ -1,4 +1,4 @@
-{%extends "registration/base.html"%} {% load bootstrap4 %}
+{%extends "registration/base.html"%} {% load bootstrap3 %}
 {% block content %}
 <div class="container">
   <div class="row">
@@ -11,7 +11,7 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Mtaa Sign Up</h3>
+          <h3 class="text-center">Neighbourhood Sign Up</h3>
         </div>
         <div class="panel-body">
 
