--- a/hood_app/templates/base.html
+++ b/hood_app/templates/base.html
@@ -27,7 +27,7 @@
 <body>
   {% include "navbar.html" %}
   {% block content %} <h1 class='text-center'>Neighbourhood</h1>
-  <p class='text-center'>Welcome to Neighbourhood, Join a neighbourhood, Meet new neighbours, post latest happenings.</p>
+  <p class='text-center'>The Ultimate Neighbourhood of your dreams!</p>
   {%endblock%}
 
   {% block scripts %}
